Fixed brighter color on sidebar scrollbar

--- a/resources/assets/css/color-adjustments.css
+++ b/resources/assets/css/color-adjustments.css
@@ -4,10 +4,6 @@
     particularly for dark mode.
 */
 
-[data-bs-theme=dark] body {
-    background-color: var(--tblr-bg-main-color);
-}
-
 [data-bs-theme=dark] ::placeholder {
     color: rgba(var(--tblr-body-color-rgb), 0.5) !important;
 }
@@ -26,7 +22,7 @@
 }
 
 [data-bs-theme=dark] .card {
-    border: var(--tblr-card-border-width) solid var(--tblr-light-border-subtle);
+    border-color: var(--tblr-light-border-subtle);
 }
 
 [data-bs-theme=dark] .card-header,
@@ -168,22 +164,6 @@
     color: var(--tblr-light) !important;
 }
 
-/*scrollbar*/
-/* Track */
-[data-bs-theme=dark]::-webkit-scrollbar-track {
-    background: var(--tblr-dark);
-}
-
-/* Handle */
-[data-bs-theme=dark]::-webkit-scrollbar-thumb {
-    background: var(--tblr-bg-surface);
-}
-
-/* Handle on hover */
-[data-bs-theme=dark]::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
 [data-bs-theme=dark] table.table.table-striped > tbody > tr:nth-of-type(even) > * {
     --tblr-table-accent-bg: var(--tblr-bg-surface);
 }
@@ -213,10 +193,4 @@ td a.btn.btn-sm.btn-link:hover,
 button.inline-create-button:hover {
     text-decoration: none;
     color: rgba(var(--tblr-primary-rgb), .8);
-}
-
-aside.navbar-dark,
-header.navbar-dark,
-div.navbar-dark {
-    background-color: #291f2f;
 }
